# AlanDeniseEricLauren

./: AlanDeniseEricLauren.cabal  LICENSE  README  README.md  accidentally quadratic.ods  reducecase.cabal  stack.yaml
app/: ADEL.hs  Dumpvars.hs  Main.hs
bench/: Main.hs
benchmark graphs/: accidentally quadratic.ods  back1.ods  back2.ods  new.ods
lib/: ADEL.hs
src/: ADEL.hs
test/: Main.hs
