name: AlanDeniseEricLauren
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Echo Nolan
maintainer: echo@echonolan.net
homepage: http://github.com/enolan/AlanDeniseEricLauren
synopsis: Find the minimal subset/submap satisfying some property.
description:
    Please see README.md
category: Algoritms
author: Echo Nolan

library
    exposed-modules:
        ADEL
    build-depends:
        base >=4.8.1.0 && <4.9,
        containers >=0.5.6.2 && <0.6,
        MonadRandom >=0.4.1 && <0.5,
        random ==1.1.*,
        random-shuffle >=0.0.4 && <0.1,
        vector >=0.10.12.3 && <0.11
    default-language: Haskell2010
    default-extensions: BangPatterns ScopedTypeVariables
    hs-source-dirs: src
    ghc-options: -fdefer-typed-holes -Wall

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: AlanDeniseEricLauren, base, containers, hspec, hspec-core, QuickCheck,
                   random, transformers, MonadRandom
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables