name: AlanDeniseEricLauren
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Echo Nolan
maintainer: echo@echonolan.net
homepage: http://github.com/enolan/AlanDeniseEricLauren
synopsis: Find the minimal subset/submap satisfying some property.
description:
    Please see README.md
category: Algoritms
author: Echo Nolan
extra-doc-files: README.md

library
    exposed-modules:
        ADEL
    build-depends:
        base,
        containers,
        MonadRandom,
        mtl,
        random,
        random-shuffle,
        vector
    default-language: Haskell2010
    default-extensions: FlexibleContexts, RankNTypes
    hs-source-dirs: src
    ghc-options: -fdefer-typed-holes -Wall

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: AlanDeniseEricLauren, base, containers, hspec, hspec-core, QuickCheck,
                   random, transformers, MonadRandom
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables

benchmark bench
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: bench
   build-depends: AlanDeniseEricLauren, base, containers, criterion
   default-language: Haskell2010
