name:                reducecase
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/reducecase#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable reducecase
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes
  build-depends:       base, containers, directory, MonadRandom, process,
                       random, random-shuffle, vector
  default-language:    Haskell2010
  other-modules:       ADEL
  default-extensions:  ScopedTypeVariables
