name: reducecase
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2010 Author Here
maintainer: example@example.com
homepage: http://github.com/githubuser/reducecase#readme
synopsis: Initial project template from stack
description:
    Please see README.md
category: Web
author: Author name here

library
    exposed-modules:
        ADEL
    build-depends:
        base >=4.8.1.0 && <4.9,
        containers >=0.5.6.2 && <0.6,
        MonadRandom >=0.4.1 && <0.5,
        random ==1.1.*,
        random-shuffle >=0.0.4 && <0.1,
        vector >=0.10.12.3 && <0.11
    default-language: Haskell2010
    default-extensions: BangPatterns ScopedTypeVariables
    hs-source-dirs: lib
    ghc-options: -fdefer-typed-holes

executable reducecase
    main-is: Main.hs
    build-depends:
        reducecase >=0.1.0.0 && <0.2,
        base >=4.8.1.0 && <4.9,
        containers >=0.5.6.2 && <0.6,
        directory >=1.2.2.0 && <1.3,
        MonadRandom >=0.4.1 && <0.5,
        process >=1.2.3.0 && <1.3,
        random ==1.1.*,
        random-shuffle >=0.0.4 && <0.1,
        vector >=0.10.12.3 && <0.11
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes

executable dumpvars
    main-is: Dumpvars.hs
    build-depends: base
    default-language: Haskell2010
    hs-source-dirs: app

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: reducecase, base, containers, hspec, hspec-core, QuickCheck,
                   random, transformers, MonadRandom
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables